# NoAmp-Low-Rider-DI

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/agents/: dsp-validator.md  schematic-checker.md
.claude/rules/: circuit.md  dsp.md  lessons.md  netlists.md  ui.md
.github/workflows/: ci.yml  release.yml
.story/: .gitignore  config.json  roadmap.json
.story/handovers/: 2026-07-16-01-storybloq-initial-setup.md  2026-07-16-02-checkpoint.md
.story/issues/: ISS-001.json  ISS-002.json  ISS-003.json  ISS-004.json  ISS-005.json  ISS-006.json  ISS-007.json  ISS-008.json  ISS-009.json  ISS-010.json  ISS-011.json  ISS-012.json  ISS-013.json
.story/lessons/: L-001.json
.story/notes/: N-001.json  N-002.json  N-003.json  N-004.json
.story/tickets/: T-001.json
analysis/: README.md  ab_report.py  analyze.py  asymmetry_check.py  base_rate_warp_measure.py  bass_hump_localise.py  capture_band_snr.py  check_asym_sources.py  cj_scan.py  comprehensive_report.py  dashboard_gen.py  extract_findings.py  farina_regression_check.py  farina_validate.py  fr_offset_decompose.py  gapb_drive_fr_scan.py  gapb_linear_3to4k.py  gapd_anchor_map.py  gapd_compression_fr.py  gapd_coupling_gate.py  gapd_finding4_orders.py  gapd_fit_harness.py  gapd_flag_check.py  gapd_harmonic_map.py  gapd_harmonic_perband.py  gapd_hf_fr_accounting.py  gapd_hf_origin.py  gapd_hf_restore_fit.py  gapd_hf_zener_scan.py  gapd_locus_reachability.py  gapd_lowdrive_bracket.py  gapd_memoryless_impossibility.py  gapd_module_tau_screen.py  gapd_postblend_test.py  gapd_sag_discriminator.py  gapd_v2_chr_fit.py  gapd_vzt_authority.py  gapd_zener_level.py  gape_v2_band.py  gaph_topoct_current.py  (+124 more)
analysis/captures-quarantine/: README.md
docs/: build-plan.md  calibration-and-gain-staging.md  hq-eco-implementation-plan.md  phase10-gap-audit.md  presets.csv  reference-fr-targets.md  ui-noamp-assets.md  ui-peripheral-spec.md  validation-and-capture.md
docs/history/: phase10-session-log.md
installer/linux/: build_deb.sh  control
installer/macos/: Distribution.xml  build_installer.sh
installer/windows/: Pedal.nsi
src/: FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AccurateOmega.h  Calibration.h  ClipDriveNormaliser.h  ClipHarmonicReducer.h  DiagFlags.h  DryTapDelay.h  GbwCorrection.h  HFEvenRestore.h  NodalCircuit.h  OpAmpStage.h  RailClip.h  RecoverySaturator.h  RevisionLevelTrim.h  RtypeNumeric.h  ToneWarpShelf.h  TopOctaveShelf.h  TwinTNotch.h  V1EEvenShaper.h  V1EarlyDSP.h  V1EarlyDriveClipRecovery.h  V1EarlyStages.h  V1LPhaseCorrectionPrototype.h  V1LateDSP.h  V1LateStages.h  V2DSP.h  V2Stages.h  WetHFCorrection.h  WetLFCorrection.h  WetTopOctaveRestore.h  ZenerDriveClipRecovery.h  ZenerDriveModule.h  ZenerPairT.h
src/ui/: DualValueLabel.h  LEDIndicator.h  PedalAssets.cpp  PedalAssets.h  PedalLookAndFeel.cpp  PedalLookAndFeel.h  ThreePositionSwitch.h  VUMeter.h
src/utils/: ChangeGate.h  Prewarp.h  TaperUtils.h
tests/: ClipDriveNormaliserTest.cpp  DryTapAlignmentTest.cpp  FactoryPresetsTest.cpp  FeatureProfile.cpp  FullSweepTest.cpp  OSFidelity.cpp  PerfBenchmark.cpp  PresenceAuthorityProbe.cpp  RCLowpassSmokeTest.cpp  RevisionLevelTrimTest.cpp  RevisionSwitchTest.cpp  StateRoundTrip.cpp  ToneWarpShelfTest.cpp  TrimLockTest.cpp  TwinTAuthorityProbe.cpp  TwinTPhaseProbe.cpp  TwinTScaleProbe.cpp  UIRenderProbe.cpp  V1EarlyBlendLevelTest.cpp  V1EarlyDriveTest.cpp  V1EarlyInputRefTest.cpp  V1EarlyIntegrationTest.cpp  V1EarlyNonlinearTest.cpp  V1EarlyOutputTest.cpp  V1EarlyPresenceTest.cpp  V1EarlyRecoveryTest.cpp  V1EarlyTHDSweepTest.cpp  V1EarlyToneStackTest.cpp  V1LateDriveTest.cpp  V1LateGapDTest.cpp  V1LateIntegrationTest.cpp  V1LateStagesTest.cpp  V1LateWetPhaseBudget.cpp  V1LateWetPolarityProbe.cpp  V2ClipHarmonicReducerTest.cpp  V2ClipLocusProbe.cpp  V2IntegrationTest.cpp  V2MidToneTest.cpp  V2PostClipProbe.cpp  V2RecoveryTest.cpp  (+2 more)
ui/: positions.csv
